--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "cocoon-js": "^0.0.5",
     "coffee-loader": "^0.9.0",
     "coffeescript": "1.12.7",
-    "jquery": "3.5.0",
+    "jquery": "3.5.1",
     "jquery-ui-dist": "^1.12.1",
     "popper.js": "^1.16.1",
+    "sweetalert2": "^9.13.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
